# LABORATORIO_PROGRAMMAZIONE_ELABORATO

./: .gitignore  Account.cpp  Account.h  CMakeLists.txt  README.md  Transaction.cpp  Transaction.h  main.cpp
test/: CMakeLists.txt  TestAccount.cpp  TestTransaction.cpp  runAllTests.cpp
